edits to fanpage

--- a/fanpage.html
+++ b/fanpage.html
@@ -15,8 +15,11 @@
   <h2>Bio</h2>
   <p>
   Africa's Finest! Drip everywhere!
+  <br/>
   Sauti Sol are a Kenyan afro-pop band formed in Nairobi, Kenya by vocalists Bien-Aimé Baraza, Willis Chimano and Savara
   Mudigi in 2005. Initially an a cappella group, guitarist Polycarp Otieno joined before they named themselves Sauti.
+  <br/>
+  <a href="https://www.facebook.com/SautiSol/" target="_blank">Follow them on Facebook.</a>
   </p>
   <h2>Members</h2>
   <ul>
